# obsidian-cli

./: .gitignore  Cargo.toml  README.md  config.example.yaml
.github/workflows/: build-binaries.yml
docs/: cli_feature_plan1.md  deploy-hermes.md  deploy-webdav-nginx.md
scripts/: sync-version-from-tag.sh
skills/obsidian-webdav/: SKILL.md
skills/obsidian-webdav/agents/: openai.yaml
skills/obsidian-webdav/references/: agent-adapters.md  command-recipes.md
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  markdown.rs  pathguard.rs  webdav.rs
tests/: cli_contract.rs  command_admin_output_contract.rs  command_new_contract.rs  command_read_contract.rs  command_webdav_method_contract.rs  config_contract.rs  markdown_contract.rs  pathguard_contract.rs  version_sync_contract.rs  webdav_contract.rs
